# NppAIAssistant

./: .gitignore  AI-Assistant.vcxproj  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  README_zh-TW.md  plugin-admin-metadata.json
.github/workflows/: CI_build.yml
docs/: DEVELOPMENT_LOG.md  GITHUB_RELEASE_TEMPLATE.md  NPP_PLUGINLIST_PR_TEMPLATE.md  PLUGIN_ADMIN_SUBMISSION.md  SECURITY_REMEDIATION.md  SECURITY_VERIFICATION.md  USAGE.md
scripts/: install-npp-ai-plugin.ps1  package-npp-ai-plugin.ps1
src/: AIAssistant.cpp  AIAssistantResources.h  AIAssistantResources.rc  AIAssistantVersion.h
src/shared/: HttpClient.cpp  HttpClient.h  LLMApiClient.cpp  LLMApiClient.h  SettingsStorage.cpp
